--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-mongodb-session": "^3.1.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "fs": "^0.0.1-security"
+    "express-session": "^1.17.2",
+    "fs": "^0.0.1-security",
+    "mongoose": "^6.1.5",
+    "node-fetch": "^2.6.6"
   }
 }
